<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/nav_icon_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@mipmap/nav_icon_account"
            android:title="@string/account_manager"/>

        <item
            android:id="@+id/nav_message"
            android:icon="@mipmap/nav_icon_message"
            android:title="@string/account_message"
            />

        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/nav_icon_settings"
            android:title="@string/setting"
            />

    </group>

    <item android:title="@string/person_security">
        <menu>
            <item
                android:id="@+id/nav_security"
                android:icon="@mipmap/nav_icon_security"
                android:title="@string/security_center"/>
            <item
                android:id="@+id/nav_loginout"
                android:icon="@mipmap/nav_icon_logout"
                android:title="@string/loginout"/>
        </menu>
    </item>

</menu>
